--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,95 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2016 Google Inc.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License. -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.hellosharedprefs.MainActivity">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/count_textview"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="60"
-        android:background="@color/default_background"
-        android:gravity="center"
-        android:text="@string/default_count"
-        android:textColor="@android:color/white"
-        android:textSize="112sp" />
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_weight="10"
-        android:orientation="horizontal">
+    </android.support.design.widget.AppBarLayout>
 
-        <Button
-            android:id="@+id/black_background_button"
-            style="@style/AppTheme.Button.Colored"
-            android:background="@android:color/black"
-            android:onClick="changeBackground"
-            android:text="@string/black_button" />
+    <include layout="@layout/content_main" />
 
-        <Button
-            android:id="@+id/red_background_button"
-            style="@style/AppTheme.Button.Colored"
-            android:background="@color/red_background"
-            android:onClick="changeBackground"
-            android:text="@string/red_button" />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
-        <Button
-            android:id="@+id/blue_background_button"
-            style="@style/AppTheme.Button.Colored"
-            android:background="@color/blue_background"
-            android:onClick="changeBackground"
-            android:text="@string/blue_button" />
-
-        <Button
-            android:id="@+id/green_background_button"
-            style="@style/AppTheme.Button.Colored"
-            android:background="@color/green_background"
-            android:onClick="changeBackground"
-            android:text="@string/green_button" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/count_button"
-            style="@style/AppTheme.Button"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
-            android:onClick="countUp"
-            android:text="@string/count_button" />
-
-        <Button
-            android:id="@+id/reset_button"
-            style="@style/AppTheme.Button"
-            android:onClick="reset"
-            android:text="@string/reset_button" />
-
-    </LinearLayout>
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
